# vebplib

./: README.md  pyproject.toml  requirements.txt
scripts/: build.py  install.py  upload.py
test/: message.py
vebplib/: __init__.py  args.py  launch.py  math.py  message.py  modulelib.py  output.py  path.py  text.py  zip.py
vebplib/color/: __init__.py  util.py
vebplib/color/_console/: __init__.py
vebplib/file/: __init__.py  plist.py
vebplib/func/: __init__.py  injection.py  wrapper.py
vebplib/system/: __init__.py
vebplib/venvs/: __init__.py  path.py  version.py
