[build-system]
requires = ["setuptools >= 48.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vebplib"
version = "1.0.0"
description = "python lib"
authors = [
    { name = "ndrzy", email = "dandan0019@outlook.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    'colorama'
]

[project.urls]
Homepage = "https://github.com/meatdumplings0019/vebplib"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]